@startuml
scale 2
abstract class AbstractSource << abstract >> {
    String name
    Date start_collect
    Date end_collect

    common_process()
    {abstract} custom_process()
    process()

}

class Survey {
    custom_process()
}

class Census {
    custom_process()
}

class Webscrapping {
    custom_process()
}

class AdministrativeFile {
    custom_process()
}


abstract class AbstractFile << abstract >> {
    String path
    {abstract} void parse()
}

class JsonFile {
    void parse()
}

class CsvFile {
    void parse()
}

class XmlFile {
    void parse()
}



AbstractSource <|-- Survey
AbstractSource <|-- Census
AbstractSource <|-- Webscrapping
AbstractSource <|-- AdministrativeFile

AbstractFile <|--JsonFile
AbstractFile <|--CsvFile
AbstractFile <|-right-XmlFile

AbstractSource o-right-"1" AbstractFile

@enduml